maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:19: error: not found: value rand3
      atteint=rand3()
              ^